# ban-carbon-research

./: LICENSE  Makefile  README.md  pyproject.toml
ban_carbon_research/: __init__.py  dataset.py  features.py  plots.py
ban_carbon_research/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 1-fdv-data-processing.ipynb  2-fdv-power-plant-map.ipynb  3-fdv-power-plant-exploration.ipynb
