[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ban_carbon_research"
version = "0.0.1"
description = "Ban Carbon research."
authors = [
  { name = "Francisco del Villar" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "geopandas>=1.1.1",
    "loguru",
    "matplotlib>=3.10.6",
    "mkdocs",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pandera>=0.26.1",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "tqdm",
    "typer",
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["ban_carbon_research"]
include = ["pyproject.toml", "ban_carbon_research/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["ban_carbon_research"]
force-sort-within-sections = true

